@@ -57,7 +57,6 @@ zc.recipe.cmmi = 1.3.4
 archetypes.markerfield = 1.0
 collective.autopermission = 1.0b1
 collective.ATClamAV = 1.1
-collective.flag = 1.2
 collective.z3cform.datetimewidget = 1.0.4
 iw.rejectanonymous = 1.0.2
 plone.app.discussion = 1.0b11-jarn1
